<resources>
    <string name="app_name">CRYPTILE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="safe_password">Safe Password</string>
    <string name="safe_name">Safe Name</string>
    <string name="level_of_encryption_message">Set the level of encryption required for your safe. Higher also means more processing time required. Lower is faster but uses comparatively easier algorithms. More details provided in the documentation section.</string>
    <string name="verify">Verify</string>
    <string name="clear">Clear</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="web_client_id">52037316332-715s58328hk1etfq22e2a7gi2tr0gpk4.apps.googleusercontent.com</string>
    <string name="email_sent_message">An E-mail validation link has been sent to your email account. Open the mail and click on the link provided in the mail to verify your email. Once your email has been verified, login again to the app.</string>
    <string name="delete_account_warning">***Selecting this button would mean you want to delete the account you have currently logged in to using this app. This is not a reversible step. Deletion of this account means you would no longer have access to your personal key as it would be destroyed in the process. This means you would not be able to access your private CRYPTILE safes. your non-private safes would still be accessible since they don\'t rely on the account specific key.***</string>
    <string name="consequences_warning">I understand the consequences of this action</string>
    <string name="export">Export</string>
    <string name="reset_password_message">A password reset email has been sent to your email account. Click the link provided in the email to reset your password.</string>
    <string name="sign_up_description">You can either sign up using the google Sign up process or your email address. Signing up to the app creates your account name and a secret key. This key that has been created will be used for every personal safe. This key would not be used with public safes. The key would prevent other users from using the safe you created as private.</string>
    <string name="app_about">CRYPTILE is intended to be used to encrypt and store any file YOU want to keep safe. It does not save any user data other than the user\'s one key linked to the account. This project is an open source project and you can navigate to the repository by clicking the button below</string>
    <string name="personal_about">Hi there. My name is Vaishnav Kanhirathingal. Currently I am a third year computer student. Android development is my thing. This was one of the projects I have completed. I also have a little bit of experience in 3d modelling and animation. You can find some of my blender projects on my instagram handle. For any queries, you can find my contacts below.</string>
</resources>