<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/prompt_horizontal"
    tools:background="#eeeeee"
    tools:layout_margin="30dp">

    <TextView
        android:id="@+id/file_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="CRYPTILE_META_FILE.txt" />

    <TextView
        android:id="@+id/file_details_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/prompt_horizontal"
        tools:text="2022/07/01 | 1.12 KB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/open_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/open_24"
            android:text="@string/open"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/prompt_horizontal"
                android:layout_weight="1"
                android:drawableTop="@drawable/delete_24"
                android:text="@string/delete" />

            <Button
                android:id="@+id/export_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/prompt_horizontal"
                android:layout_weight="1"
                android:drawableTop="@drawable/export_24"
                android:text="@string/export" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>