<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui_fragments.CreateSafeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back_24"
            app:title="Create Safe" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/create_safe_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/safe_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:hint="@string/safe_name"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:helperText="This will be displayed in the list as the safe's name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/safe_password_one_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:hint="@string/safe_password"
                app:counterEnabled="true"
                app:counterMaxLength="32"
                app:helperText="This will be used to access the safe"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                app:dividerThickness="@dimen/divider_thickness"
                tools:dividerThickness="3dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:backgroundTint="@color/card_background"
                app:cardCornerRadius="@dimen/create_safe_card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/create_safe_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/create_safe_horizontal"
                            android:src="@drawable/key_24" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/use_multiple_passwords_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/create_safe_horizontal"
                            android:text="Use Multiple Passwords?" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/safe_password_two_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                        android:hint="Second Password"
                        app:counterEnabled="true"
                        app:counterMaxLength="32"
                        app:helperText="This Will Be Used As An Additional Requirement Password To Access The Given Safe"
                        app:passwordToggleEnabled="true"
                        app:startIconDrawable="@drawable/password_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                app:dividerThickness="@dimen/divider_thickness"
                tools:dividerThickness="3dp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:backgroundTint="@color/card_background"
                app:cardCornerRadius="@dimen/create_safe_card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/create_safe_horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:src="@drawable/folder_24" />

                    <TextView
                        android:id="@+id/current_safe_directory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:layout_weight="1"
                        android:text="safe/location/folder/name" />

                    <ImageButton
                        android:id="@+id/select_directory_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:src="@drawable/folder_24" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                app:dividerThickness="@dimen/divider_thickness"
                tools:dividerThickness="3dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:backgroundTint="@color/card_background"
                android:padding="@dimen/create_safe_horizontal"
                app:cardCornerRadius="@dimen/create_safe_card_radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/create_safe_horizontal">

                    <ImageView
                        android:id="@+id/safe_type_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:src="@drawable/personal_safe_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/personal_access_only_switch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:text="Personal Access Only?"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/safe_type_image_view"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                app:dividerThickness="@dimen/divider_thickness"
                tools:dividerThickness="3dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:backgroundTint="@color/card_background"
                android:padding="@dimen/create_safe_horizontal"
                app:cardCornerRadius="@dimen/create_safe_card_radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/create_safe_horizontal">

                    <ImageView
                        android:id="@+id/safe_path_status"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:src="@drawable/location_off_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/path_hidden_switch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/create_safe_horizontal"
                        android:text="Hide Path"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/safe_path_status"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                app:dividerThickness="@dimen/divider_thickness"
                tools:dividerThickness="3dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                android:backgroundTint="@color/card_background"
                app:cardCornerRadius="@dimen/create_safe_card_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/level_of_encryption_message" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/encryption_level_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="1.0"
                        android:valueFrom="1"
                        android:valueTo="3" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_safe_horizontal"
                android:layout_marginBottom="@dimen/create_safe_vertical"
                app:dividerThickness="@dimen/divider_thickness"
                tools:dividerThickness="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/create_safe_vertical">

                <Button
                    android:id="@+id/cancel_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/confirm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>